--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,27 @@ body {
     margin: 10%;
 }
 
-#calculator {
+#calculator {    
     height: 500px;
     width: 350px;
     border-style: solid;
 }
 
 #calculator #head {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     /* height is roughly 1/3 of entire calculator */
     height: 150px;  
     background-color: lightblue;
+}
+
+#screen {
+    height: 50px;
+    width: 300px;
+    background-color: white;
+    border-style: solid;
+
 }
 
 #calculator #body {
