--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
     /* height is roughly 1/3 of entire calculator */
     height: 150px;  
     background-color: lightblue;
+    text-align: right;
 }
 
 #screen {
